# legendary-spoon

./: .gitignore  .pre-commit-config.yaml  README.md  REDIS_SETUP.md  alembic.ini  main.py  manage.py  pyproject.toml
alembic/: env.py
authentication/application/: ports.py  rules.py
authentication/domain/: entities.py
authentication/infrastructure/: custom_oauth2_schemes.py  factory.py  models.py  repositories.py  services.py
authentication/presentation/: __init__.py  auth.py  requests.py  responses.py
cache/application/: ports.py
cache/infrastructure/: decorators.py  factory.py  services.py
config/: base.py  database.py
core/application/: ports.py
core/infrastructure/: decorators.py  factory.py  services.py
core/infrastructure/cache/: decorators.py
core/infrastructure/exceptions/: __init__.py  handler.py
core/infrastructure/logging/: __init__.py  base.py  context.py  format.py  middleware.py
core/presentation/: responses.py
notifications/application/: ports.py  rules.py
notifications/domain/: entities.py
notifications/infrastructure/: factory.py  models.py  repositories.py  services.py
notifications/presentation/: __init__.py  notification.py  requests.py  responses.py
users/application/: ports.py
users/domain/: entities.py
users/infrastructure/: factory.py  models.py  repositories.py
users/presentation/: __init__.py  responses.py  user.py
