[project]
name = "phantom-zone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "cryptography>=45.0.5",
    "fastapi[all]>=0.116.1",
    "greenlet>=3.2.3",
    "hiredis>=3.2.1",
    "loguru>=0.7.3",
    "msgpack>=1.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.2.0",
    "pyjwt>=2.10.1",
    "redis>=6.2.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlmodel>=0.0.24",
]
